--- a/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
+++ b/EngineQ/EngineQDemonstrationScripts/EngineQDemonstrationScripts.csproj
@@ -52,8 +52,8 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>if not exist "$(SolutionDir)EngineQDemonstration\ProductionEnv\Scripts" mkdir "$(SolutionDir)EngineQDemonstration\ProductionEnv\Scripts"
-COPY "$(ProjectDir)bin\$(Configuration)\QScripts.dll" "$(SolutionDir)EngineQDemonstration\ProductionEnv\Scripts\"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
