--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Graphics\Framebuffer.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="Scripting\API_Application.cpp" />
     <ClCompile Include="Scripting\API_Input.cpp" />
@@ -67,6 +68,7 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Graphics\Framebuffer.hpp" />
     <ClInclude Include="InputController.hpp" />
     <ClInclude Include="Scripting\API_Application.hpp" />
     <ClInclude Include="Scripting\API_Input.hpp" />
