--- a/EngineQ/EngineQ/EngineQ.vcxproj
+++ b/EngineQ/EngineQ/EngineQ.vcxproj
@@ -20,8 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Graphics\Framebuffer.cpp" />
+    <ClCompile Include="Graphics\PostprocessingEffect.cpp" />
     <ClCompile Include="Graphics\PostprocessingExceptions.cpp" />
-    <ClCompile Include="Graphics\PostprocessingUnit.cpp" />
+    <ClCompile Include="Graphics\RenderingUnit.cpp" />
     <ClCompile Include="Graphics\RendererConfiguration.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -75,7 +76,7 @@
     <ClInclude Include="Graphics\Framebuffer.hpp" />
     <ClInclude Include="Graphics\PostprocessingEffect.hpp" />
     <ClInclude Include="Graphics\PostprocessingExceptions.hpp" />
-    <ClInclude Include="Graphics\PostprocessingUnit.hpp" />
+    <ClInclude Include="Graphics\RenderingUnit.hpp" />
     <ClInclude Include="Graphics\RendererConfiguration.hpp" />
     <ClInclude Include="InputController.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
