--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -3,12 +3,12 @@
 	<Textures>
 		<TextureConfiguration>
 			<Format>GL_RGB</Format>
-			<DataType>GL_FLOAT</DataType>
+			<DataType>GL_UNSIGNED_BYTE</DataType>
 			<Name>tex1</Name>
 		</TextureConfiguration>
 		<TextureConfiguration>
 			<Format>GL_RGB</Format>
-			<DataType>GL_FLOAT</DataType>
+			<DataType>GL_UNSIGNED_BYTE</DataType>
 			<Name>tex2</Name>
 		</TextureConfiguration>
 	</Textures>
