--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <RendererConfiguration>
 	<Textures>
-		<TextureConfiguration>
-			<Format>GL_RGB</Format>
-			<DataType>GL_UNSIGNED_BYTE</DataType>
-			<Name>tex1</Name>
-		</TextureConfiguration>
-		<TextureConfiguration>
-			<Format>GL_RGB</Format>
-			<DataType>GL_UNSIGNED_BYTE</DataType>
-			<Name>tex2</Name>
-		</TextureConfiguration>
+		<TextureConfiguration Name="tex1" />
+		<TextureConfiguration Name="tex2" />
 	</Textures>
 	<Renderer>
-		<Deffered>false</Deffered>
 		<Output>
-			<Output>
-				<Texture>tex1</Texture>
-			</Output>
+			<OutputTexture Texture="tex1"/>
 		</Output>
 	</Renderer>
 	<Effects>
@@ -32,9 +21,9 @@
 				</InputPair>
 			</Input>
 			<Output>
-				<Output>
+				<OutputTexture>
 					<Texture>tex2</Texture>
-				</Output>
+				</OutputTexture>
 			</Output>
 		</EffectConfiguration>
 		<EffectConfiguration>
@@ -52,9 +41,9 @@
 				</InputPair>
 			</Input>
 			<Output>
-				<Output>
+				<OutputTexture>
 					<Texture>Screen</Texture>
-				</Output>
+				</OutputTexture>
 			</Output>
 		</EffectConfiguration>
 	</Effects>
