XML loading improved

--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<RendererConfiguration>
+<RenderingUnitConfiguration>
 	<Textures>
 		<TextureConfiguration Name="tex1" />
 		<TextureConfiguration Name="tex2" />
+		<TextureConfiguration Name="tex3" />
 	</Textures>
 	<Renderer>
 		<Output>
@@ -10,41 +11,22 @@
 		</Output>
 	</Renderer>
 	<Effects>
-		<EffectConfiguration>
-			<Shader>4</Shader>
-			<ClassName>TestClass</ClassName>
-			<DepthTesting>true</DepthTesting>
+		<EffectConfiguration Shader="4" DepthTesting="true">
 			<Input>
-				<InputPair>
-					<Location>0</Location>
-					<Texture>tex1</Texture>
-				</InputPair>
+				<InputPair Location="0" Texture="tex1" />
 			</Input>
 			<Output>
-				<OutputTexture>
-					<Texture>tex2</Texture>
-				</OutputTexture>
+				<OutputTexture Texture="tex2" />
 			</Output>
 		</EffectConfiguration>
-		<EffectConfiguration>
-			<Shader>5</Shader>
-			<ClassName>TestClass2</ClassName>
-			<DepthTesting>false</DepthTesting>
+		<EffectConfiguration Shader="5" >
 			<Input>
-				<InputPair>
-					<Location>0</Location>
-					<Texture>tex1</Texture>
-				</InputPair>
-				<InputPair>
-					<Location>1</Location>
-					<Texture>tex2</Texture>
-				</InputPair>
+				<InputPair Location="0" Texture="tex1" />
+				<InputPair Location="1" Texture="tex2" />
 			</Input>
 			<Output>
-				<OutputTexture>
-					<Texture>Screen</Texture>
-				</OutputTexture>
+				<OutputTexture />
 			</Output>
 		</EffectConfiguration>
 	</Effects>
-</RendererConfiguration>
+</RenderingUnitConfiguration>
