Postprocessing configuration loaded from file

--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -11,9 +11,9 @@
 		</Output>
 	</Renderer>
 	<Effects>
-		<EffectConfiguration Shader="4" DepthTesting="true">
+		<EffectConfiguration Shader="6">//bright extract
 			<Input>
-				<InputPair Location="0" Texture="tex1" />
+				<InputPair Location="0" Texture="tex1"/>
 			</Input>
 			<Output>
 				<OutputTexture Texture="tex2" />
@@ -21,8 +21,56 @@
 		</EffectConfiguration>
 		<EffectConfiguration Shader="5" >
 			<Input>
-				<InputPair Location="0" Texture="tex1" />
-				<InputPair Location="1" Texture="tex2" />
+				<InputPair Location="0" Texture="tex2" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex3" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="4" >
+			<Input>
+				<InputPair Location="0" Texture="tex3" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex2" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="5" >
+			<Input>
+				<InputPair Location="0" Texture="tex2" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex3" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="4" >
+			<Input>
+				<InputPair Location="0" Texture="tex3" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex2" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="5" >
+			<Input>
+				<InputPair Location="0" Texture="tex2" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex3" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="4" >
+			<Input>
+				<InputPair Location="0" Texture="tex3" />
+			</Input>
+			<Output>
+				<OutputTexture Texture="tex2" />
+			</Output>
+		</EffectConfiguration>
+		<EffectConfiguration Shader="7" >
+			<Input>
+				<InputPair Location="0" Texture="tex1" LocationName="scene" />
+				<InputPair Location="1" Texture="tex2" LocationName="bloomBlur" />
 			</Input>
 			<Output>
 				<OutputTexture />
