--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -1,79 +1,36 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <RenderingUnitConfiguration>
 	<Textures>
-		<TextureConfiguration Name="tex1" />
-		<TextureConfiguration Name="tex2" />
-		<TextureConfiguration Name="tex3" />
+		<TextureConfiguration Name="position" />
+		<TextureConfiguration Name="normal" />
+		<TextureConfiguration Name="albedo" />
 	</Textures>
-	<Renderer>
+	<Renderer Deferred="true">
 		<Output>
-			<OutputTexture Texture="tex1"/>
+			<OutputTexture Texture="position"/>
+			<OutputTexture Texture="normal" />
+			<OutputTexture Texture="albedo" />
 		</Output>
 	</Renderer>
 	<Effects>
-		<EffectConfiguration Shader="6">//bright extract
+		<!--<EffectConfiguration Shader="8">//geomtry lightning
 			<Input>
-				<InputPair Location="0" Texture="tex1"/>
+				<InputPair Location="0" Texture="position"/>
+				<InputPair Location="1" Texture="normal"/>
+				<InputPair Location="2" Texture="albedo"/>
 			</Input>
 			<Output>
-				<OutputTexture Texture="tex2" />
+				<OutputTexture Texture="Screen" />
 			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="5" >
+		</EffectConfiguration>-->
+		<EffectConfiguration Shader="3">
 			<Input>
-				<InputPair Location="0" Texture="tex2" />
+				<InputPair Location="0" Texture="position" LocationName="worldPosition" />
+				<InputPair Location="1" Texture="normal"  LocationName="normal" />
+				<InputPair Location="2" Texture="albedo" LocationName="albedo" />
 			</Input>
 			<Output>
-				<OutputTexture Texture="tex3" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="4" >
-			<Input>
-				<InputPair Location="0" Texture="tex3" />
-			</Input>
-			<Output>
-				<OutputTexture Texture="tex2" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="5" >
-			<Input>
-				<InputPair Location="0" Texture="tex2" />
-			</Input>
-			<Output>
-				<OutputTexture Texture="tex3" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="4" >
-			<Input>
-				<InputPair Location="0" Texture="tex3" />
-			</Input>
-			<Output>
-				<OutputTexture Texture="tex2" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="5" >
-			<Input>
-				<InputPair Location="0" Texture="tex2" />
-			</Input>
-			<Output>
-				<OutputTexture Texture="tex3" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="4" >
-			<Input>
-				<InputPair Location="0" Texture="tex3" />
-			</Input>
-			<Output>
-				<OutputTexture Texture="tex2" />
-			</Output>
-		</EffectConfiguration>
-		<EffectConfiguration Shader="7" >
-			<Input>
-				<InputPair Location="0" Texture="tex1" LocationName="scene" />
-				<InputPair Location="1" Texture="tex2" LocationName="bloomBlur" />
-			</Input>
-			<Output>
-				<OutputTexture />
+				<OutputTexture Texture="Screen" />
 			</Output>
 		</EffectConfiguration>
 	</Effects>
