--- a/EngineQ/EngineQ/EngineQ.vcxproj.filters
+++ b/EngineQ/EngineQ/EngineQ.vcxproj.filters
@@ -13,7 +13,6 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="Graphics\ForwardRenderer.cpp" />
     <ClCompile Include="Graphics\Shader.cpp" />
     <ClCompile Include="Graphics\ShaderExceptions.cpp" />
     <ClCompile Include="Graphics\ShaderPart.cpp" />
@@ -53,6 +52,7 @@
     <ClCompile Include="Utilities\ResourcesIDs.cpp" />
     <ClCompile Include="Graphics\RenderingUnit.cpp" />
     <ClCompile Include="Graphics\ShaderPass.cpp" />
+    <ClCompile Include="Graphics\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Graphics\Framebuffer.hpp" />
@@ -67,7 +67,6 @@
     <ClInclude Include="Component.hpp" />
     <ClInclude Include="Engine.hpp" />
     <ClInclude Include="Entity.hpp" />
-    <ClInclude Include="Graphics\ForwardRenderer.hpp" />
     <ClInclude Include="Graphics\Shader.hpp" />
     <ClInclude Include="Graphics\ShaderExceptions.hpp" />
     <ClInclude Include="Graphics\ShaderPart.hpp" />
@@ -117,6 +116,7 @@
     <ClInclude Include="Utilities\ResourcesIDs.hpp" />
     <ClInclude Include="Graphics\RenderingUnit.hpp" />
     <ClInclude Include="Graphics\ShaderPass.hpp" />
+    <ClInclude Include="Graphics\Renderer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Math\Vector2.inl" />
