--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -13,21 +13,11 @@
 		</Output>
 	</Renderer>
 	<Effects>
-		<!--<EffectConfiguration Shader="8">//geomtry lightning
+		<EffectConfiguration Shader="8">//geomtry lightning
 			<Input>
-				<InputPair Location="0" Texture="position"/>
-				<InputPair Location="1" Texture="normal"/>
-				<InputPair Location="2" Texture="albedo"/>
-			</Input>
-			<Output>
-				<OutputTexture Texture="Screen" />
-			</Output>
-		</EffectConfiguration>-->
-		<EffectConfiguration Shader="3">
-			<Input>
-				<InputPair Location="0" Texture="position" LocationName="worldPosition" />
-				<InputPair Location="1" Texture="normal"  LocationName="normal" />
-				<InputPair Location="2" Texture="albedo" LocationName="albedo" />
+				<InputPair Location="0" Texture="position" LocationName="worldPosition"/>
+				<InputPair Location="1" Texture="normal" LocationName="normal"/>
+				<InputPair Location="2" Texture="albedo" LocationName="albedo"/>
 			</Input>
 			<Output>
 				<OutputTexture Texture="Screen" />
