--- a/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
+++ b/EngineQ/EngineQDemonstration/Resources/postprocessing.conf
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <RenderingUnitConfiguration>
 	<Textures>
-		<TextureConfiguration Name="position" />
-		<TextureConfiguration Name="normal" />
-		<TextureConfiguration Name="albedo" />
+		<TextureConfiguration Name="position" DataType="GL_FLOAT" InternalFormat="GL_RGB16F" Format="GL_RGB" />
+		<TextureConfiguration Name="normal" DataType="GL_FLOAT" InternalFormat="GL_RGB16F" Format="GL_RGB"/>
+		<TextureConfiguration Name="albedo" InternalFormat="GL_RGBA" Format="GL_RGBA"/>
 	</Textures>
 	<Renderer Deferred="true">
 		<Output>
